Blokdesign_2/Blokdesign.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:33:11 **** Incremental Build of configuration Debug for project freertos_test1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
make: Nothing to be done for 'main-build'.
18:33:36 **** Incremental Build of configuration Debug for project freertos_test1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
make: Nothing to be done for 'main-build'.
18:34:03 **** Incremental Build of configuration Debug for project freertos_test1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
make: Nothing to be done for 'main-build'.
18:44:24 **** Incremental Build of configuration Debug for project freertos_test1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
make: Nothing to be done for 'main-build'.
18:49:26 **** Incremental Build of configuration Debug for project freertos_test1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
make: Nothing to be done for 'main-build'.
13:08:04 **** Incremental Build of configuration Debug for project freertos_test1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
make: Nothing to be done for 'main-build'.
13:11:22 **** Auto Build of configuration Debug for project freertos_test1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/platform.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/platform.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../freertos_test1_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/platform.d" -MT"src/platform.o" -o "src/platform.o" "../src/platform.c"
../src/platform.c: In function 'init_platform':
../src/platform.c:102:2: warning: implicit declaration of function 'ps7_init' [-Wimplicit-function-declaration]
  ps7_init();
  ^~~~~~~~
Finished building: ../src/platform.c
 
Building target: freertos_test1.elf
Invoking: ARM v7 gcc linker
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../freertos_test1_bsp/ps7_cortexa9_0/lib -o "freertos_test1.elf"  ./src/helloworld.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
c:/xilinx/sdk/2019.1/gnu/aarch32/nt/gcc-arm-none-eabi/bin/../lib/gcc/arm-none-eabi/8.2.0/../../../../arm-none-eabi/bin/ld.exe: ./src/platform.o: in function `init_platform':
C:\Users\admin\Documents\pxl\3dejaar\embedded_os\Eindopdracht_EOS\Blokdesign_2\Blokdesign.sdk\freertos_test1\Debug/../src/platform.c:102: undefined reference to `ps7_init'
collect2.exe: error: ld returned 1 exit status
make: *** [makefile:41: freertos_test1.elf] Error 1
13:11:41 **** Auto Build of configuration Debug for project freertos_test1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/platform.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/platform.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../freertos_test1_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/platform.d" -MT"src/platform.o" -o "src/platform.o" "../src/platform.c"
../src/platform.c:43:10: warning: missing terminating " character
 #include "ps7_init.h
          ^
../src/platform.c:43:10: error: #include expects "FILENAME" or <FILENAME>
 #include "ps7_init.h
          ^~~~~~~~~~~
../src/platform.c: In function 'init_platform':
../src/platform.c:103:2: warning: implicit declaration of function 'ps7_init' [-Wimplicit-function-declaration]
  ps7_init();
  ^~~~~~~~
make: *** [src/subdir.mk:26: src/platform.o] Error 1
13:12:49 **** Auto Build of configuration Debug for project freertos_test1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/helloworld.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../freertos_test1_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c:47:10: fatal error: ps7/psu_init.h: No such file or directory
 #include <ps7/psu_init.h>
          ^~~~~~~~~~~~~~~~
compilation terminated.
make: *** [src/subdir.mk:26: src/helloworld.o] Error 1
13:12:59 **** Auto Build of configuration Debug for project freertos_test1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/helloworld.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../freertos_test1_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c:47:10: fatal error: ps7/psu_init.h: No such file or directory
 #include "ps7/psu_init.h"
          ^~~~~~~~~~~~~~~~
compilation terminated.
make: *** [src/subdir.mk:26: src/helloworld.o] Error 1
13:13:07 **** Auto Build of configuration Debug for project freertos_test1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/helloworld.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../freertos_test1_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c:47:10: fatal error: psu_init.h: No such file or directory
 #include "psu_init.h"
          ^~~~~~~~~~~~
compilation terminated.
make: *** [src/subdir.mk:26: src/helloworld.o] Error 1
13:13:14 **** Auto Build of configuration Debug for project freertos_test1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/helloworld.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../freertos_test1_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
Finished building: ../src/helloworld.c
 
Building file: ../src/platform.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/platform.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../freertos_test1_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/platform.d" -MT"src/platform.o" -o "src/platform.o" "../src/platform.c"
../src/platform.c:43:10: warning: missing terminating " character
 #include "ps7_init.h
          ^
../src/platform.c:43:10: error: #include expects "FILENAME" or <FILENAME>
 #include "ps7_init.h
          ^~~~~~~~~~~
../src/platform.c: In function 'init_platform':
../src/platform.c:103:2: warning: implicit declaration of function 'ps7_init' [-Wimplicit-function-declaration]
  ps7_init();
  ^~~~~~~~
make: *** [src/subdir.mk:26: src/platform.o] Error 1
13:13:30 **** Auto Build of configuration Debug for project freertos_test1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/platform.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/platform.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../freertos_test1_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/platform.d" -MT"src/platform.o" -o "src/platform.o" "../src/platform.c"
Finished building: ../src/platform.c
 
Building target: freertos_test1.elf
Invoking: ARM v7 gcc linker
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../freertos_test1_bsp/ps7_cortexa9_0/lib -o "freertos_test1.elf"  ./src/helloworld.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
Finished building target: freertos_test1.elf
 
Invoking: ARM v7 Print Size
arm-none-eabi-size freertos_test1.elf  |tee "freertos_test1.elf.size"
   text	   data	    bss	    dec	    hex	filename
  19064	   1144	  22568	  42776	   a718	freertos_test1.elf
Finished building: freertos_test1.elf.size
 
13:13:47 **** Auto Build of configuration Debug for project freertos_test1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/platform.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/platform.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../freertos_test1_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/platform.d" -MT"src/platform.o" -o "src/platform.o" "../src/platform.c"
../src/platform.c:43:10: fatal error: ps7_init.h: No such file or directory
 #include "ps7_init.h"
          ^~~~~~~~~~~~
compilation terminated.
make: *** [src/subdir.mk:26: src/platform.o] Error 1
13:13:58 **** Auto Build of configuration Debug for project freertos_test1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/platform.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/platform.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../freertos_test1_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/platform.d" -MT"src/platform.o" -o "src/platform.o" "../src/platform.c"
Finished building: ../src/platform.c
 
Building target: freertos_test1.elf
Invoking: ARM v7 gcc linker
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../freertos_test1_bsp/ps7_cortexa9_0/lib -o "freertos_test1.elf"  ./src/helloworld.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
Finished building target: freertos_test1.elf
 
Invoking: ARM v7 Print Size
arm-none-eabi-size freertos_test1.elf  |tee "freertos_test1.elf.size"
   text	   data	    bss	    dec	    hex	filename
  19064	   1144	  22568	  42776	   a718	freertos_test1.elf
Finished building: freertos_test1.elf.size
 
